syntax = "proto3";

package transport; 

service SendService {
  rpc SendMSG(ClientMSG) returns (ServMSG) {}
}

message ServMSG {
  int32 id = 1;
  float temperature = 2;
  string name = 3;
}

message ClientMSG  {
  string name = 1;
}